hphp/test/zend/bad/ext-spl/SplHeap_insert_invalid_parameter.php
<?php

$h = new SplMaxHeap();

var_dump($h->insert());

?>